# DSV

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: glm.cmake  qpdf.cmake
src/: CMakeLists.txt
src/draw/: Canvas.cpp
src/drawer/: CMakeLists.txt
src/drawer/include/: canvas.hpp
src/drawer/src/: canvas.cpp  main.cpp
src/geometry/: CMakeLists.txt  README.md
src/geometry/export_include/: geo.h
src/geometry/include/: aabb.hpp  circle.hpp  geometry.hpp  lineseg.hpp  polygon.hpp  polyline.hpp
src/geometry/src/: aabb.cpp  circle.cpp
src/ui/: CMakeLists.txt
